add flexbox to fish tab]

--- a/fish.html
+++ b/fish.html
@@ -41,225 +41,233 @@
         think is great for begginers.
     </p>
 
-    <section>
-        <h1>Center Piece Fish</h1>
-        <h2 class="angelfish">Angelfish</h2>
-        <img src='../assets/images/Angelfish.jpg' alt="Angelfish" class="fish-image">
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>20 gallons</td>
-                <td>24°C-28°C</td>
-                <td>Semi-Aggressive</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
-    </section>
+    <h1>Center Piece Fish</h1>
 
-    <section>
-        <h2>Honey Gourami</h2>
-        <img src='../assets/images/Honeygourami.jpg' alt="Honey Gourami fish" class="fish-image">
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>10 gallons</td>
-                <td>24°C-28°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
-    </section>
+    <section class="container-fish-1">
+        <div class="box-fish">
+            <h2 class="angelfish">Angelfish</h2>
+            <img src='../assets/images/Angelfish.jpg' alt="Angelfish" class="fish-image">
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>20 gallons</td>
+                    <td>24°C-28°C</td>
+                    <td>Semi-Aggressive</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
 
-    <section>
-        <h2>Betta</h2>
-        <img src='../assets/images/Betta.jpg' alt="Betta fish" class="fish-image">
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>10 gallons</td>
-                <td>23°C-29°C</td>
-                <td>Semi-Aggressive</td>
-                <td>Carnivore</td>
-            </tr>
-        </table>
+
+        <div>
+            <h2>Honey Gourami</h2>
+            <img src='../assets/images/Honeygourami.jpg' alt="Honey Gourami fish" class="fish-image">
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>10 gallons</td>
+                    <td>24°C-28°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
+
+        <div>
+            <h2>Betta</h2>
+            <img src='../assets/images/Betta.jpg' alt="Betta fish" class="fish-image">
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>10 gallons</td>
+                    <td>23°C-29°C</td>
+                    <td>Semi-Aggressive</td>
+                    <td>Carnivore</td>
+                </tr>
+            </table>
+        </div>
     </section>
 
     <h1>Schooling Fish</h1>
 
-    <section>
-        <h2>Rummy Nose Tetra</h2>
-        <img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish" class="fish-image">
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>20 gallons</td>
-                <td>23°C-29°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
-    </section>
+    <section class="container-fish-2">
+        <div>
+            <h2>Rummy Nose Tetra</h2>
+            <img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish" class="fish-image">
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>20 gallons</td>
+                    <td>23°C-29°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
 
-    <section>
-        <h2>Cherry Barb</h2>
-        <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish" class="fish-image">
+        <div>
+            <h2>Cherry Barb</h2>
+            <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish" class="fish-image">
 
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>20 gallons</td>
-                <td>23°C-26°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
-    </section>
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>20 gallons</td>
+                    <td>23°C-26°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
 
-    <section>
-        <h2>Ember Tetra</h2>
-        <img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish" class="fish-image">
+        <div>
+            <h2>Ember Tetra</h2>
+            <img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish" class="fish-image">
 
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>10 gallons</td>
-                <td>23°C-26°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
-    </section>
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>10 gallons</td>
+                    <td>23°C-26°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
 
-    <section>
-        <h2>Neon Tetra</h2>
-        <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish" class="fish-image">
+        <div>
+            <h2>Neon Tetra</h2>
+            <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish" class="fish-image">
 
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>10 gallons</td>
-                <td>23°C–29°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>10 gallons</td>
+                    <td>23°C–29°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
     </section>
 
     <h1>Bottom Dwelling Fish</h1>
 
-    <section>
-        <h2>Bronze Corydoras</h2>
-        <img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish" class="fish-image">
+    <section class="container-fish-3">
+        <div>
+            <h2>Bronze Corydoras</h2>
+            <img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish" class="fish-image">
 
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>10 gallons</td>
-                <td>22°C–26°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
-    </section>
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>10 gallons</td>
+                    <td>22°C–26°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
 
-    <section>
-        <h2>Panda Corydoras</h2>
-        <img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish" class="fish-image">
+        <div>
+            <h2>Panda Corydoras</h2>
+            <img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish" class="fish-image">
 
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>10 gallons</td>
-                <td>22°C–27°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
-    </section>
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>10 gallons</td>
+                    <td>22°C–27°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
 
-    <section>
-        <h2>Kuhli Loach</h2>
-        <img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish" class="fish-image">
+        <div>
+            <h2>Kuhli Loach</h2>
+            <img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish" class="fish-image">
 
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>20 gallons</td>
-                <td>24°C-29°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
-    </section>
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>20 gallons</td>
+                    <td>24°C-29°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
 
-    <section>
-        <h2>Hillstream Loach</h2>
-        <img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish" class="fish-image">
+        <div>
+            <h2>Hillstream Loach</h2>
+            <img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish" class="fish-image">
 
-        <table>
-            <tr>
-                <th>Tank Size</th>
-                <th>Water temperature</th>
-                <th>Temperament</th>
-                <th>Diet</th>
-            </tr>
-            <tr>
-                <td>10 gallons</td>
-                <td>23°C–29°C</td>
-                <td>Peaceful</td>
-                <td>Omnivore</td>
-            </tr>
-        </table>
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Diet</th>
+                </tr>
+                <tr>
+                    <td>10 gallons</td>
+                    <td>23°C–29°C</td>
+                    <td>Peaceful</td>
+                    <td>Omnivore</td>
+                </tr>
+            </table>
+        </div>
     </section>
 
     <footer>
@@ -271,7 +279,7 @@
             <input type="text" id="lname" name="lname"><br>
             <input type="submit" value="Sign Up" id="button">
         </form>
-        
+
         <ul id="social-links">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-facebook"></i></a></li>
