--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
         <form id="Sign-up">
             <h4>Sign up for our Weekly NewsLetter</h4>
             <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" name="fname"><br>
             <label for="lname">Last Name:</label><br>
-            <input type="text" id="lname" name="lname"><br>
+            <input type="text" name="lname"><br>
+            <label for="email">Email:</label><br>
+            <input type="text" name="email"><br>
             <input type="submit" value="Sign Up" id="button">
         </form>
 
