--- a/fish.html
+++ b/fish.html
@@ -47,7 +47,7 @@
         <div class="box-fish">
             <h2 class="angelfish">Angelfish</h2>
             <img src='../assets/images/Angelfish.jpg' alt="Angelfish" class="fish-image">
-            <table>
+            <table class="fish-table">
                 <tr>
                     <th>Tank Size</th>
                     <th>Water temperature</th>
