--- a/plants.html
+++ b/plants.html
@@ -32,136 +32,99 @@
 
 
     <section>
-    <h2>Plants</h2>
-    <p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle
-        your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in the
-        water.</p>
-    </section>
+        <h1>Plants for Beginners</h1>
+        <p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle
+            your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in
+            the
+            water.
+        </p>
+    </section>    
 
-    <h2>Plants for Beginners</h2>
-
-    <section>
-        <h3>Anubias</h3>
-        <img src='../assets/images/anubias.jpg' alt="Anubias aquarium plant">
-        <table>
-            <thead>
+    <section class="container-plant">
+        <div>
+            <h2>Anubias</h2>
+            <img src='../assets/images/anubias.jpg' alt="Anubias aquarium plant" class="plant-image">
+            <table>
                 <tr>
-                    <th>Category</th>
-                    <th>Rating</th>
+                    <th>Care Level</th>
+                    <th>Placement</th>
+                    <th>Lighting</th>
+                    <th>Water temperature</th>
                 </tr>
-            <tbody>
                 <tr>
-                    <td>Care Level</td>
                     <td>Easy</td>
-                </tr>
-                <tr>
-                    <td>Placement</td>
                     <td>Foreground</td>
-                </tr>
-                <tr>
-                    <td>Lighting</td>
                     <td>Low-Moderate</td>
-                </tr>
-                <tr>
-                    <td>Water temperature</td>
                     <td>22-27</td>
                 </tr>
-            </tbody>
-            </thead>
-        </table>
-    </section>
+            </table>
+        </div>
 
-    <section>
-        <h3>Java Fern</h3>
-        <img src='../assets/images/Java Fern.jpg' alt="Java Fern aquarium plant">
-        <table>
-            <thead>
-                <tr>
-                    <th>Category</th>
-                    <th>Rating</th>
-                </tr>
-            <tbody>
-                <tr>
-                    <td>Care Level</td>
-                    <td>Easy</td>
-                </tr>
-                <tr>
-                    <td>Placement</td>
-                    <td>Mid to Background</td>
-                </tr>
-                <tr>
-                    <td>Lighting</td>
-                    <td>Low-Moderate</td>
-                </tr>
-                <tr>
-                    <td>Water temperature</td>
-                    <td>20-27</td>
-                </tr>
-            </tbody>
-            </thead>
-        </table>
-    </section>
+        <div>
+            <h2>Java Fern</h2>
+            <img src='../assets/images/Java Fern.jpg' alt="Java Fern aquarium plant" class="plant-image">
+            <table>
+                <thead>
+                    <tr>
+                        <td>Care Level</td>
+                        <td>Placement</td>
+                        <td>Lighting</td>
+                        <td>Water temperature</td>
+                    </tr>
+                    <tr>
+                        <td>Easy</td>
+                        <td>Mid to Background</td>
+                        <td>Low-Moderate</td>
+                        <td>20-27</td>
+                    </tr>
+            </table>
+        </div>
 
-    <section>
-        <h3>Amazon Sword</h3>
-        <img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant">
-        <table>
-            <thead>
-                <tr>
-                    <th>Category</th>
-                    <th>Rating</th>
-                </tr>
-            <tbody>
-                <tr>
-                    <td>Care Level</td>
-                    <td>Easy</td>
-                </tr>
-                <tr>
-                    <td>Placement</td>
-                    <td>Background</td>
-                </tr>
-                <tr>
-                    <td>Lighting</td>
-                    <td>Low-Moderate</td>
-                </tr>
-                <tr>
-                    <td>Water temperature</td>
-                    <td>20-27</td>
-                </tr>
-            </tbody>
-            </thead>
-        </table>
-    </section>
+        <div>
+            <h2>Amazon Sword</h2>
+            <img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant" class="plant-image">
+            <table>
+                <thead>
+                    <tr>
+                        <td>Care Level</td>
+                        <td>Placement</td>
+                        <td>Lighting</td>
+                        <td>Water temperature</td>
+                    </tr>
+                    <tr>
+                        <td>Easy</td>
+                        <td>Background</td>
+                        <td>Low-Moderate</td>
+                        <td>20-27</td>
+                    </tr>
+                    </tbody>
+                </thead>
+            </table>
+        </div>
 
-    <section>
-        <h3>Cryptocoryne</h3>
-        <img src='../assets/images/cryptocoryne.jpg' alt="cryptocoryne aquarium plant">
-        <table>
-            <thead>
-                <tr>
-                    <th>Category</th>
-                    <th>Rating</th>
-                </tr>
-            <tbody>
-                <tr>
-                    <td>Care Level</td>
-                    <td>Easy</td>
-                </tr>
-                <tr>
-                    <td>Placement</td>
-                    <td>Mid ground</td>
-                </tr>
-                <tr>
-                    <td>Lighting</td>
-                    <td>Low-Moderate</td>
-                </tr>
-                <tr>
-                    <td>Water temperature</td>
-                    <td>20-26</td>
-                </tr>
-            </tbody>
-            </thead>
-        </table>
+        <div>
+            <h2>Cryptocoryne</h2>
+            <img src='../assets/images/cryptocoryne.jpg' alt="cryptocoryne aquarium plant" class="plant-image">
+            <table>
+                <thead>
+                    <tr>
+                    <tr>
+                        <td>Care Level</td>
+                        <td>Placement</td>
+                        <td>Lighting</td>
+                        <td>Water temperature</td>
+                    </tr>
+                    <tr>
+                        <td>Easy</td>
+                        <td>Midground</td>
+                        <td>Low-Moderate</td>
+                        <td>20-26</td>
+                    </tr>
+                    </tr>
+                    </tbody>
+                </thead>
+            </table>
+        </div>
     </section>
 
     <footer>
@@ -174,7 +137,7 @@
             <input type="submit" value="Sign Up" id="button">
         </form>
 
-        <ul id="social-links">            
+        <ul id="social-links">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
@@ -182,7 +145,7 @@
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-youtube"></i></a></li>
         </ul>
-        
+
     </footer>
 
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
