add style and more images to plant tab

--- a/plants.html
+++ b/plants.html
@@ -35,105 +35,81 @@
         <h1>Plants for Beginners</h1>
         <p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle
             your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in
-            the
-            water.
+            the water. All the plants we ahve here listed bewlo are all great for beginner aquarist. They are all easy to look after and do not require anythiong other than some root tabs and some good lighting.
         </p>
-    </section>    
+    </section>
 
-    <section class="container-plant">
+    <h1>ForeGround Plants</h1>
+    <section class="container-plant-1">
         <div>
             <h2>Anubias</h2>
             <img src='../assets/images/anubias.jpg' alt="Anubias aquarium plant" class="plant-image">
-            <table>
-                <tr>
-                    <th>Care Level</th>
-                    <th>Placement</th>
-                    <th>Lighting</th>
-                    <th>Water temperature</th>
-                </tr>
-                <tr>
-                    <td>Easy</td>
-                    <td>Foreground</td>
-                    <td>Low-Moderate</td>
-                    <td>22-27</td>
-                </tr>
-            </table>
+        </div>
+        <div>
+            <h2>Moss Ball</h2>
+            <img src='../assets/images/Moss ball.jpg' alt="Moss Ball aquarium plant" class="plant-image">
+        </div>
+        <div>
+            <h2>Mini Needle Leaf</h2>
+            <img src='../assets/images/mini-needle-leaf.jpg' alt="Mini Needle Leaf plant" class="plant-image">
+        </div>
+        <div>
+            <h2>Hygrophila Corymbosa</h2>
+            <img src='../assets/images/hygrophila-corymbosa-kompakt.jpg' alt="Hygrophila Corymbosa plant" class="plant-image">
         </div>
 
+    </section>
+
+    <h1>Mid-Ground Plants</h1>
+    <section class="container-plant-1">
         <div>
             <h2>Java Fern</h2>
             <img src='../assets/images/Java Fern.jpg' alt="Java Fern aquarium plant" class="plant-image">
-            <table>
-                <thead>
-                    <tr>
-                        <td>Care Level</td>
-                        <td>Placement</td>
-                        <td>Lighting</td>
-                        <td>Water temperature</td>
-                    </tr>
-                    <tr>
-                        <td>Easy</td>
-                        <td>Mid to Background</td>
-                        <td>Low-Moderate</td>
-                        <td>20-27</td>
-                    </tr>
-            </table>
         </div>
-
-        <div>
-            <h2>Amazon Sword</h2>
-            <img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant" class="plant-image">
-            <table>
-                <thead>
-                    <tr>
-                        <td>Care Level</td>
-                        <td>Placement</td>
-                        <td>Lighting</td>
-                        <td>Water temperature</td>
-                    </tr>
-                    <tr>
-                        <td>Easy</td>
-                        <td>Background</td>
-                        <td>Low-Moderate</td>
-                        <td>20-27</td>
-                    </tr>
-                    </tbody>
-                </thead>
-            </table>
-        </div>
-
         <div>
             <h2>Cryptocoryne</h2>
             <img src='../assets/images/cryptocoryne.jpg' alt="cryptocoryne aquarium plant" class="plant-image">
-            <table>
-                <thead>
-                    <tr>
-                    <tr>
-                        <td>Care Level</td>
-                        <td>Placement</td>
-                        <td>Lighting</td>
-                        <td>Water temperature</td>
-                    </tr>
-                    <tr>
-                        <td>Easy</td>
-                        <td>Midground</td>
-                        <td>Low-Moderate</td>
-                        <td>20-26</td>
-                    </tr>
-                    </tr>
-                    </tbody>
-                </thead>
-            </table>
+        </div>
+        <div>
+            <h2>Echinodorus Red</h2>
+            <img src='../assets/images/ECHINODORUS-RED-FLAMED.jpg' alt="Echinodorus Red aquarium plant" class="plant-image">
+        </div>
+        <div>
+            <h2>Micorsorum Petit</h2>
+            <img src='../assets/images/microsorum-pteropus-petit.jpg' alt="Micorsorum Petit aquarium plant" class="plant-image">
         </div>
     </section>
+
+    <h1>Background Plants</h1>
+    <section class="container-plant-1">
+        <div>
+            <h2>Amazon Sword</h2>
+            <img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant" class="plant-image">
+        </div>
+        <div>
+            <h2>Micorsorum Trident</h2>
+            <img src='assets/images/microsorum-pteropus-trident.jpg' alt="Micorsorum Trident aquarium plant" class="plant-image">
+        </div>
+        <div>
+            <h2>Vallisneria Sword</h2>
+            <img src='assets/images/vallisneria-nana-gracilis.jpg' alt="Amazon Sword aquarium plant" class="plant-image">
+        </div>
+        <div>
+            <h2>Ceratophyllum Demersum</h2>
+            <img src='../assets/images/ceratophyllum-demersum.jpg' alt="Amazon Sword aquarium plant" class="plant-image">
+        </div>
+    </section>
+
 
     <footer>
         <form id="Sign-up">
             <h4>Sign up for our Weekly NewsLetter</h4>
             <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" name="fname"><br>
             <label for="lname">Last Name:</label><br>
-            <input type="text" id="lname" name="lname"><br>
+            <input type="text" name="lname"><br>
+            <label for="email">Email:</label><br>
+            <input type="text" name="email"><br>
             <input type="submit" value="Sign Up" id="button">
         </form>
 
