add different category to fish table

--- a/fish.html
+++ b/fish.html
@@ -52,13 +52,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>20 gallons</td>
                     <td>24°C-28°C</td>
                     <td>Semi-Aggressive</td>
-                    <td>Omnivore</td>
+                    <td>1 or 4+</td>
                 </tr>
             </table>
         </div>
@@ -72,13 +72,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>10 gallons</td>
                     <td>24°C-28°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>2+</td>
                 </tr>
             </table>
         </div>
@@ -91,17 +91,39 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>10 gallons</td>
                     <td>23°C-29°C</td>
                     <td>Semi-Aggressive</td>
-                    <td>Carnivore</td>
+                    <td>1</td>
                 </tr>
             </table>
         </div>
+
+        <div>
+            <h2>Bolivian Ram</h2>
+            <img src='assets/images/Bolivian ram.jpg' alt="Honey Gourami fish" class="fish-image">
+            <table>
+                <tr>
+                    <th>Tank Size</th>
+                    <th>Water temperature</th>
+                    <th>Temperament</th>
+                    <th>Group Size</th>
+                </tr>
+                <tr>
+                    <td>20 gallons</td>
+                    <td>24°C-28°C</td>
+                    <td>Peaceful</td>
+                    <td>4+</td>
+                </tr>
+            </table>
+        </div>
+
     </section>
+
+
 
     <h1>Schooling Fish</h1>
 
@@ -114,13 +136,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>20 gallons</td>
                     <td>23°C-29°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>6+</td>
                 </tr>
             </table>
         </div>
@@ -134,13 +156,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>20 gallons</td>
                     <td>23°C-26°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>6+</td>
                 </tr>
             </table>
         </div>
@@ -154,13 +176,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>10 gallons</td>
                     <td>23°C-26°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>6+</td>
                 </tr>
             </table>
         </div>
@@ -174,13 +196,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>10 gallons</td>
                     <td>23°C–29°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>3+</td>
                 </tr>
             </table>
         </div>
@@ -198,13 +220,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>10 gallons</td>
                     <td>22°C–26°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>6+</td>
                 </tr>
             </table>
         </div>
@@ -218,13 +240,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>10 gallons</td>
                     <td>22°C–27°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>6+</td>
                 </tr>
             </table>
         </div>
@@ -238,13 +260,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>20 gallons</td>
                     <td>24°C-29°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>3+</td>
                 </tr>
             </table>
         </div>
@@ -258,13 +280,13 @@
                     <th>Tank Size</th>
                     <th>Water temperature</th>
                     <th>Temperament</th>
-                    <th>Diet</th>
+                    <th>Group Size</th>
                 </tr>
                 <tr>
                     <td>10 gallons</td>
                     <td>23°C–29°C</td>
                     <td>Peaceful</td>
-                    <td>Omnivore</td>
+                    <td>3+</td>
                 </tr>
             </table>
         </div>
