--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="container-1">
         <div class="box-1">
             <h3>Location, Location, Location</h3>      
-            <div id="Location"></div>      
+            <img src='assets/images/location.jpg' alt="Location of a fish tank in a hall" class="box-1-image">    
             <p>Picking a location for your aquarium is more important than you think. Try not to have it beside windows
                 or heating or aircon vents. As this will cause algae blooms with the light and temperature fluctuations
                 with the heat and aircon vents
