add new image for neon tetra

--- a/fish.html
+++ b/fish.html
@@ -189,7 +189,7 @@
 
         <div>
             <h2>Neon Tetra</h2>
-            <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish" class="fish-image">
+            <img src='../assets/images/Neon-tetra.jpg' alt="Neon Tetra Fish" class="fish-image">
 
             <table>
                 <tr>
