add intro class to paragraphs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <h1>Introduction</h1>
     <section>
-        <p>In this page I am going to outline what is needed to set up your very first tropical freshwater
+        <p class="intro">In this page I am going to outline what is needed to set up your very first tropical freshwater
             aquarium.
             Throughout this website we will go through the what is needed when setting up your very first freshwater
             tropical aquarium. We will go through the equipment that is needed, the best fish for beginners, so you have
@@ -43,7 +43,7 @@
 
     <h1>What you need to get started</h1>
     <section>
-        <p> When starting your fish keeping hobby, there are a few things to consider when beginning your journey. In
+        <p class="intro"> When starting your fish keeping hobby, there are a few things to consider when beginning your journey. In
             this section we will go over what you need to start and some things you need to think about before making a
             purchase. As part of your equipment we reccomend getting <a
                 href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help
