started to add responsive design

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </p>
     </section>
     <br>
-    <section class="container-1">
+    <section class="container">
         <div class="box-1">
             <h3>Location, Location, Location</h3>
             <img src='assets/images/location.jpg' alt="Location of a fish tank in a hall" class="box-1-image">
@@ -78,7 +78,7 @@
         </div>
     </section>
     <br>
-    <section class="container-2">
+    <section class="container">
         <div class="box-2">
             <h3>Filter</h3>
             <img src='../assets/images/Filter.jpg' alt="aquarium filter" class="box-2-image">
