removed padding from hero image

--- a/fish.html
+++ b/fish.html
@@ -43,8 +43,8 @@
     <h1>Center Piece Fish</h1>
 
     <section class="container-fish-1">
-        <div class="box-fish">
-            <h2 class="angelfish">Angelfish</h2>
+        <div>
+            <h2>Angelfish</h2>
             <img src='../assets/images/Angelfish.jpg' alt="Angelfish" class="fish-image">
             <table>
                 <tr>
