--- a/plants.html
+++ b/plants.html
@@ -40,19 +40,19 @@
 
     <h1>ForeGround Plants</h1>
     <section class="container-plant-1">
-        <div class="box-plant-1">
+        <div>
             <h2>Anubias</h2>
             <img src='../assets/images/anubias.jpg' alt="Anubias aquarium plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Moss Ball</h2>
             <img src='../assets/images/Moss ball.jpg' alt="Moss Ball aquarium plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Mini Needle Leaf</h2>
             <img src='../assets/images/mini-needle-leaf.jpg' alt="Mini Needle Leaf plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Hygrophila Corymbosa</h2>
             <img src='../assets/images/hygrophila-corymbosa-kompakt.jpg' alt="Hygrophila Corymbosa plant" class="plant-image">
         </div>
@@ -60,19 +60,19 @@
 
     <h1>Mid-Ground Plants</h1>
     <section class="container-plant-1">
-        <div class="box-plant-1">
+        <div>
             <h2>Java Fern</h2>
             <img src='../assets/images/Java Fern.jpg' alt="Java Fern aquarium plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Cryptocoryne</h2>
             <img src='../assets/images/cryptocoryne.jpg' alt="cryptocoryne aquarium plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Echinodorus Red</h2>
             <img src='../assets/images/ECHINODORUS-RED-FLAMED.jpg' alt="Echinodorus Red aquarium plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Micorsorum Petit</h2>
             <img src='../assets/images/microsorum-pteropus-petit.jpg' alt="Micorsorum Petit aquarium plant" class="plant-image">
         </div>
@@ -80,19 +80,19 @@
 
     <h1>Background Plants</h1>
     <section class="container-plant-1">
-        <div class="box-plant-1">
+        <div>
             <h2>Amazon Sword</h2>
             <img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Micorsorum Trident</h2>
             <img src='assets/images/microsorum-pteropus-trident.jpg' alt="Micorsorum Trident aquarium plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Vallisneria Sword</h2>
             <img src='assets/images/vallisneria-nana-gracilis.jpg' alt="Amazon Sword aquarium plant" class="plant-image">
         </div>
-        <div class="box-plant-1">
+        <div>
             <h2>Ceratophyllum Demersum</h2>
             <img src='../assets/images/ceratophyllum-demersum.jpg' alt="Amazon Sword aquarium plant" class="plant-image">
         </div>
