fixed images not apperaing in web browser, incorrect file path

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 
         <div class="box-1">
             <h3>Cleaning/Maintence equipment</h3>
-            <img src='../assets/images/cleaning kit.jpg' alt="Fish tank cleaning equipment" class="box-1-image">
+            <img src='assets/images/cleaning kit.jpg' alt="Fish tank cleaning equipment" class="box-1-image">
             <p>Having cleaning and Maintence equipment will make you job as a fish keeper much easier. We recommend
                 having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover.</p>
         </div>
 
         <div class="box-1">
             <h3>Tank (bigger is better)</h3>
-            <img src='../assets/images/tank.jpg' alt="Fish tank" class="box-1-image">
+            <img src='assets/images/tank.jpg' alt="Fish tank" class="box-1-image">
             <p>Despite what you might think, having a bigger aquarium is easier to care for than smaller one. The more
                 volume of water you have, the easier it is to maintain and balance your aquarium environment. We
                 recommend at least 20 gallons (75 litters)</p>
@@ -81,7 +81,7 @@
     <section class="container">
         <div class="box-2">
             <h3>Filter</h3>
-            <img src='../assets/images/Filter.jpg' alt="aquarium filter" class="box-2-image">
+            <img src='assets/images/Filter.jpg' alt="aquarium filter" class="box-2-image">
             <p>The filter is an important part of keeping a healthy aquarium. This will help clean your water and filter
                 out the fish waste and debris. We recommend either a hang on back filter or internal filter. Just make
                 sure that whichever filter you choose that it is sufficient enough to deal with the volume of water you
@@ -90,7 +90,7 @@
 
         <div class="box-2">
             <h3>Heater and Thermometer</h3>
-            <img src='../assets/images/Heater.jpg' alt="aquarium heater" class="box-2-image">
+            <img src='assets/images/Heater.jpg' alt="aquarium heater" class="box-2-image">
             <p>Fish can't produce their own body heat, so it’s important to keep them at their ideal temperature with a
                 heater. It’s also advise to have a thermometer, this will help you keep track on the temperature of the
                 water.</p>
@@ -106,7 +106,7 @@
 
         <div class="box-2">
             <h3>Substrate</h3>
-            <img src='../assets/images/tank-substrate.jpg' alt="aquarium substrate" class="box-2-image">
+            <img src='assets/images/tank-substrate.jpg' alt="aquarium substrate" class="box-2-image">
             <p>There are many types of aquarium substrates, from gravel and stones to sand. Having substrate is a great
                 place for beneficial bacteria to live, it also makes you aquarium look more aesthetically pleasing.</p>
         </div>
