--- a/fish.html
+++ b/fish.html
@@ -45,7 +45,7 @@
     <section class="container-fish-1">
         <div>
             <h2>Angelfish</h2>
-            <img src='../assets/images/Angelfish.jpg' alt="Angelfish" class="fish-image">
+            <img src='assets/images/Angelfish.jpg' alt="Angelfish" class="fish-image">
             <table>
                 <tr>
                     <th>Tank Size</th>
@@ -65,7 +65,7 @@
 
         <div>
             <h2>Honey Gourami</h2>
-            <img src='../assets/images/Honeygourami.jpg' alt="Honey Gourami fish" class="fish-image">
+            <img src='assets/images/Honeygourami.jpg' alt="Honey Gourami fish" class="fish-image">
             <table>
                 <tr>
                     <th>Tank Size</th>
@@ -84,7 +84,7 @@
 
         <div>
             <h2>Betta</h2>
-            <img src='../assets/images/Betta.jpg' alt="Betta fish" class="fish-image">
+            <img src='assets/images/Betta.jpg' alt="Betta fish" class="fish-image">
             <table>
                 <tr>
                     <th>Tank Size</th>
@@ -129,7 +129,7 @@
     <section class="container-fish-2">
         <div>
             <h2>Rummy Nose Tetra</h2>
-            <img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish" class="fish-image">
+            <img src='assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish" class="fish-image">
             <table>
                 <tr>
                     <th>Tank Size</th>
@@ -148,7 +148,7 @@
 
         <div>
             <h2>Cherry Barb</h2>
-            <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish" class="fish-image">
+            <img src='assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish" class="fish-image">
 
             <table>
                 <tr>
@@ -168,7 +168,7 @@
 
         <div>
             <h2>Ember Tetra</h2>
-            <img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish" class="fish-image">
+            <img src='assets/images/Ember tetra.jpg' alt="Ember Tetra fish" class="fish-image">
 
             <table>
                 <tr>
@@ -188,7 +188,7 @@
 
         <div>
             <h2>Neon Tetra</h2>
-            <img src='../assets/images/Neon-tetra.jpg' alt="Neon Tetra Fish" class="fish-image">
+            <img src='assets/images/Neon-tetra.jpg' alt="Neon Tetra Fish" class="fish-image">
 
             <table>
                 <tr>
@@ -212,7 +212,7 @@
     <section class="container-fish-3">
         <div>
             <h2>Bronze Corydoras</h2>
-            <img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish" class="fish-image">
+            <img src='assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish" class="fish-image">
 
             <table>
                 <tr>
@@ -232,7 +232,7 @@
 
         <div>
             <h2>Panda Corydoras</h2>
-            <img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish" class="fish-image">
+            <img src='assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish" class="fish-image">
 
             <table>
                 <tr>
@@ -252,7 +252,7 @@
 
         <div>
             <h2>Kuhli Loach</h2>
-            <img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish" class="fish-image">
+            <img src='assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish" class="fish-image">
 
             <table>
                 <tr>
@@ -272,7 +272,7 @@
 
         <div>
             <h2>Hillstream Loach</h2>
-            <img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish" class="fish-image">
+            <img src='assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish" class="fish-image">
 
             <table>
                 <tr>
