fixed lighting image

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="box-2">
             <h3>Lighting</h3>
-            <img src='../assets/images/lighting.jpg' alt="aquarium light" class="box-2-image">
+            <img src='assets/images/lighting.jpg' alt="aquarium light" class="box-2-image">
             <p>If your aquarium comes with a built in light, that's great! Just remember to have your light on between
                 8-12 hours per day. Once you get more comfortable with your aquarium, maybe think of upgrading your
                 light. Now you can get lights with timers and adjustable lighting.</p>
