removed box-1 class die to causing isses for responsive design

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
     <br>
     <section class="container">
-        <div class="box-1">
+        <div>
             <h3>Location, Location, Location</h3>
             <img src='assets/images/location.jpg' alt="Location of a fish tank in a hall" class="box-1-image">
             <p>Picking a location for your aquarium is more important than you think. Try not to have it beside windows
@@ -62,14 +62,14 @@
             </p>
         </div>
 
-        <div class="box-1">
+        <div>
             <h3>Cleaning/Maintence equipment</h3>
             <img src='assets/images/cleaning kit.jpg' alt="Fish tank cleaning equipment" class="box-1-image">
             <p>Having cleaning and Maintence equipment will make you job as a fish keeper much easier. We recommend
                 having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover.</p>
         </div>
 
-        <div class="box-1">
+        <div>
             <h3>Tank (bigger is better)</h3>
             <img src='assets/images/tank.jpg' alt="Fish tank" class="box-1-image">
             <p>Despite what you might think, having a bigger aquarium is easier to care for than smaller one. The more
@@ -79,7 +79,7 @@
     </section>
     <br>
     <section class="container">
-        <div class="box-2">
+        <div>
             <h3>Filter</h3>
             <img src='assets/images/Filter.jpg' alt="aquarium filter" class="box-2-image">
             <p>The filter is an important part of keeping a healthy aquarium. This will help clean your water and filter
@@ -88,7 +88,7 @@
                 have in your aquarium.</p>
         </div>
 
-        <div class="box-2">
+        <div>
             <h3>Heater and Thermometer</h3>
             <img src='assets/images/Heater.jpg' alt="aquarium heater" class="box-2-image">
             <p>Fish can't produce their own body heat, so it’s important to keep them at their ideal temperature with a
@@ -96,7 +96,7 @@
                 water.</p>
         </div>
 
-        <div class="box-2">
+        <div>
             <h3>Lighting</h3>
             <img src='assets/images/lighting.jpg' alt="aquarium light" class="box-2-image">
             <p>If your aquarium comes with a built in light, that's great! Just remember to have your light on between
@@ -104,7 +104,7 @@
                 light. Now you can get lights with timers and adjustable lighting.</p>
         </div>
 
-        <div class="box-2">
+        <div>
             <h3>Substrate</h3>
             <img src='assets/images/tank-substrate.jpg' alt="aquarium substrate" class="box-2-image">
             <p>There are many types of aquarium substrates, from gravel and stones to sand. Having substrate is a great
