replaced moss ball with java moss

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <h1>What you need to get started</h1>
     <section>
         <p class="intro"> When starting your fish keeping hobby, there are a few things to consider when beginning your journey. In
-            this section we will go over what you need to start and some things you need to think about before making a
+            this section I will go over what you need to start and some things you need to think about before making a
             purchase. As part of your equipment we reccomend getting <a
                 href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help
             you test the level of Ammonia, Nitrites and Nitrates in your aquarium water.</p>
         </p>
     </section>
-    <br>
+    
     <section class="container">
         <div>
             <h3>Location, Location, Location</h3>
@@ -77,7 +77,7 @@
                 recommend at least 20 gallons (75 litters)</p>
         </div>
     </section>
-    <br>
+    
     <section class="container">
         <div>
             <h3>Filter</h3>
