--- a/plants.html
+++ b/plants.html
@@ -45,8 +45,8 @@
             <img src='assets/images/anubias.jpg' alt="Anubias aquarium plant" class="plant-image">
         </div>
         <div>
-            <h2>Moss Ball</h2>
-            <img src='assets/images/Moss ball.jpg' alt="Moss Ball aquarium plant" class="plant-image">
+            <h2>Java Moss</h2>
+            <img src='assets/images/Java moss.jpg' alt="Java Moss aquarium plant" class="plant-image">
         </div>
         <div>
             <h2>Mini Needle Leaf</h2>
